@startuml
class Management {
  - set room_list_
  - set robot_list_
  - set assignment_map
  - String csv_path_room_
  - String csv_path_robot_
  - initialize_room_list_from_csv_file(string): void
  - initialize_robot_list_from_csv_file(string): void
  + add_new_robot(string): void
  + add_new_room(string): void
  + maintenance(string): void
  + cleaning(Robot, Room, int): void
  + cleaning_assignment(string): void
  + charge(string): void
}

interface CommandLine {}

class Robots{}

class Rooms{}

Management "1" o--> "0...n" Rooms
Management "1" o--> "0...n" Robots
Management ..|> CommandLine
@enduml

